# otus-1-helloworld

./: .gitignore  .travis.yml  CMakeLists.txt  CmakeLists-GTest.cmake  lib.cpp  main.cpp  test_version_boost.cpp  test_version_gtest.cpp  version.h.in
helloworld/: CMakeLists.txt  lib.cpp  main.cpp
